tdf#139583 fix case rot 180deg for cell anchored shapes

Method adjustAnchoredPosition() in ScDrawView::Notify() needs to
distinguish whether an object really has a changed geometry or only
becomes visible. The previous solution used the snap rectangle for this.
But in the case of a 180deg rotation only the logic rectangle changes,
not the snap rectangle. The patch extends the test to consider logic
rectangle as well. SetCellAnchoredFromPosition is adjusted to create
maShapeRect, which is compared to the logic rectangle.

Change-Id: Iba8a173938da05178f1058ef98e9ef526cca490e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109386
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>