sc/source/ui/view/drawvie3.cxx
@@ -176,7 +176,13 @@ void adjustAnchoredPosition(const SdrHint& rHint, const ScDocument& rDoc, SCTAB 
 
     if (pAnchor->meType == ScDrawObjData::CellNote)
         return;
-    if (lcl_AreRectanglesApproxEqual(pAnchor->getShapeRect(), pObj->GetSnapRect()))
+
+    // SetCellAnchoredFromPosition has to be called only if shape geometry has been changed, and not
+    // if only shape visibilty has been changed. It is not enough to test shape rect, because e.g. a
+    // 180deg rotation changes only the logic rect (tdf#139583).
+    ScDrawObjData& rNoRotatedAnchor = *ScDrawLayer::GetNonRotatedObjData(pObj, true /*bCreate*/);
+    if (lcl_AreRectanglesApproxEqual(pAnchor->getShapeRect(), pObj->GetSnapRect())
+        && lcl_AreRectanglesApproxEqual(rNoRotatedAnchor.getShapeRect(), pObj->GetLogicRect()))
         return;
 
     if (pAnchor->maStart.Tab() != nTab)
